# LojbanValidator

./: .gitignore  data.txt  lojban.cabal  run.sh  stack.yaml
app/: Main.hs
src/: Lojban.hs
src/Lojban/: Syntax.hs  Valid.hs  WordList.hs
src/Lojban/Syntax/: Morph.hs  Types.hs  Util.hs
test/: Main.hs  Test.hs
