name:                lojban
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/new-template#readme
author:              Author name here
maintainer:          example@example.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Flag Shared
    Description: Build a shared Library
    Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Lojban
                       , Lojban.Syntax.Util
  other-modules:       Lojban.WordList
                       , Lojban.Syntax
                       , Lojban.Syntax.Types
  build-depends:       base >= 4.7 && < 5
                       , Iso
                       , cereal
                       , bytestring
                       , random
                       , containers
                       , unordered-containers
                       , transformers
                       , split
                       , hashable
                       , list-tries
                       , directory
                       , mtl
                       , cassava
                       , vector
  default-language:    Haskell2010

executable lojbanChatBot
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , lojban
                     , transformers
                     , containers
                     , process
  default-language:    Haskell2010

executable lojban-test
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , lojban
                     , parallel
  default-language:    Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N20
